# hello-c

./: CMakeLists.txt  CMakePresets.json  FIFO.c  mmap_reader.c  mmap_writer.c  msg_queue_common.h  msg_queue_receiver.c  msg_queue_sender.c  named_sem.c  pipe.c  sem_common.h  sem_reader.c  sem_writer.c  shm_reader.c  shm_writer.c  socket_client.c  socket_server.c  socket_server_epoll.c  unnamed_sem.c
main.dSYM/Contents/Resources/DWARF/: main
